--- a/org/jedit/localization/jedit_en.props
+++ b/org/jedit/localization/jedit_en.props
@@ -526,7 +526,7 @@ view.gutter.marker=Marker: {0}
 view.status.add-marker=Shortcut for new marker? [{0}]
 view.status.auto-wrap=Search string not found; wrapping around!
 view.status.bracket=Matches line {0}: {1}
-view.status.caret-tooltip=line, column[-virtual] (offset/length)
+view.status.caret-tooltip=line, column[-virtual] (offset/length) (wordOffset/length)
 view.status.copy-append-string-register=Register name to copy append to? [{0}]
 view.status.copy-string-register=Register to copy to? [{0}]
 view.status.cut-append-string-register=Register to cut append to? [{0}]
@@ -1792,6 +1792,8 @@ options.status.caret.dot=Show caret offset from start of line
 options.status.caret.virtual=Show caret virtual offset from start of line
 options.status.caret.offset=Show caret offset from start of file
 options.status.caret.bufferlength=Show length of file
+options.status.word.offset=Show word offset from start of file
+options.status.word.bufferlength=Show number of words in the file
 options.status.caret.title=Caret position display options:
 #}}}
 
